--- a/stylesheets/partials/_layout.scss
+++ b/stylesheets/partials/_layout.scss
@@ -1,3 +1,8 @@
+header {
+	position: relative;
+	z-index: 2;
+}
+
 .center {
 	text-align: center;
 }
